--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
-      <div class="container">a
+      <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
         <h1 class="text-uppercase mb-0">Shane Nicolls</h1>
         <br>
         <br>
         <h2 class="font-weight-light mb-0">Front End Web Developer</h2>
         <br>
-        <a href="#about" class="btn btn-circle js-scroll-trigger">
+        <a href="#about" class="btn btn-circle js-scroll-trigger masthead_scroll_trigger">
           <i class="fa fa-angle-double-down animated"></i>
         </a>
       </div>
@@ -167,7 +167,7 @@
         <h2 class="text-center text-uppercase text-white">About</h2>
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead"></p>
+            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
@@ -284,7 +284,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2017</small>
+        <small>Copyright &copy; ProCode.tips 2017</small>
       </div>
     </div>
 
