--- a/index.html
+++ b/index.html
@@ -80,28 +80,56 @@
         <br>
         <div class="row">
 
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
+          <div class="project_container">
+            <div class="portfolio-item d-block mx-auto">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  <h5 style="text-align: right" class="mr-4">Created With</h5>
+                  <ul dir="rtl" class="portfolio_list">
+                    <li class="portfolio_list_item">JavaScript</li>
+                    <li class="portfolio_list_item">React.JS</li>
+                    <li class="portfolio_list_item">Node.JS</li>
+                    <li class="portfolio_list_item">CSS</li>
+                  </ul>
+                  <div class="portfolio_btn_container">
+                    <a href="https://github.com/sNicolls" class="btn btn-default btn-lg social_media_btn">
+                      <span class="network-name">Live Demo</span>
+                    </a>
+                    <a href="https://github.com/sNicolls/fish_finder_inReact" class="btn btn-default btn-lg social_media_btn">
+                      <i class="fa fa-github fa-fw"></i>
+                      <span class="network-name">Github</span>
+                    </a>
+                  </div>
                 </div>
               </div>
               <img class="img-fluid" src="img/fish_finder.png" alt="">
-            </a>
+            </div>
           </div>
 
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
+          <div class="project_container">
+            <div class="portfolio-item d-block mx-auto">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  <h5 style="text-align: right" class="mr-4">Created With</h5>
+                  <ul dir="rtl" class="portfolio_list">
+                    <li class="portfolio_list_item">JavaScript</li>
+                    <li class="portfolio_list_item">JQuery</li>
+                    <li class="portfolio_list_item">HTML</li>
+                    <li class="portfolio_list_item">CSS</li>
+                  </ul>
+                  <div class="portfolio_btn_container">
+                    <a href="./projects/m-vc-Calculator/" class="btn btn-default btn-lg social_media_btn">
+                      <span class="network-name">Live Demo</span>
+                    </a>
+                    <a href="https://github.com/sNicolls/m-vc-Calculator" class="btn btn-default btn-lg social_media_btn">
+                      <i class="fa fa-github fa-fw"></i>
+                      <span class="network-name">Github</span>
+                    </a>
+                  </div>
                 </div>
               </div>
               <img class="img-fluid" src="img/calc_3.png" alt="">
-            </a>
-          </div>
-
+            </div>
           </div>
         </div>
       </div>
@@ -167,10 +195,17 @@
         <h2 class="text-center text-uppercase text-white">About</h2>
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">
+              <h4>Intern at Technology Partners</h4>
+              Since January 2017 Shane has been an intern at St. Louis based consulting firm Technology Partners under the tutelage of the firms lead consultant.
+            </p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+
+            <p class="lead">
+              <h4>Learning Fuze Web Bootcamp</h4>
+              A graduate of aforementioned learning institution Shane spent months honing his JavaScript, React.JS, HTML, and CSS skills in a fast paced, high intensity deadline based environment.
+            </p>
           </div>
         </div>
         <div class="text-center mt-4">
@@ -193,47 +228,47 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
+    <!--<section id="contact">-->
+      <!--<div class="container">-->
+        <!--<h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>-->
+        <!--<hr class="star-dark mb-5">-->
+        <!--<div class="row">-->
+          <!--<div class="col-lg-8 mx-auto">-->
+            <!--&lt;!&ndash; To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. &ndash;&gt;-->
+            <!--&lt;!&ndash; The form should work on most web servers, but if the form is not working you may need to configure your web server differently. &ndash;&gt;-->
+            <!--<form name="sentMessage" id="contactForm" novalidate="novalidate">-->
+              <!--<div class="control-group">-->
+                <!--<div class="form-group floating-label-form-group controls mb-0 pb-2">-->
+                  <!--<label>Name</label>-->
+                  <!--<input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">-->
+                  <!--<p class="help-block text-danger"></p>-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="control-group">-->
+                <!--<div class="form-group floating-label-form-group controls mb-0 pb-2">-->
+                  <!--<label>Email Address</label>-->
+                  <!--<input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">-->
+                  <!--<p class="help-block text-danger"></p>-->
+                <!--</div>-->
+              <!--</div>-->
 
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
+              <!--<div class="control-group">-->
+                <!--<div class="form-group floating-label-form-group controls mb-0 pb-2">-->
+                  <!--<label>Message</label>-->
+                  <!--<textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>-->
+                  <!--<p class="help-block text-danger"></p>-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<br>-->
+              <!--<div id="success"></div>-->
+              <!--<div class="form-group">-->
+                <!--<button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>-->
+              <!--</div>-->
+            <!--</form>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</section>-->
 
     <!-- Footer -->
     <footer class="footer text-center">
@@ -244,7 +279,7 @@
             <p class="lead mb-0">St. Louis, MO</p>
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Around the Web</h4>
+            <h4 class="text-uppercase mb-4">Social Media</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
@@ -252,11 +287,15 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/shane-nicolls-68b92a145/">
                   <i class="fa fa-fw fa-linkedin"></i>
                 </a>
               </li>
             </ul>
+          </div>
+          <div class="col-md-4 mb-5 mb-lg-0">
+            <h4 class="text-uppercase mb-4">Contact</h4>
+            <p class="lead mb-0">SCNicolls@Charter.net</p>
           </div>
         </div>
       </div>
@@ -289,7 +328,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Calculator</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/calc_sht_2.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <p class="mb-5">A fully functioning calculator built using JavaScript, JQuery, HTML5 and CSS3 </p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -421,7 +460,7 @@
     <script src="js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/freelancer.min.js"></script>
+    <script src="js/freelancer.js"></script>
 
   </body>
 
