--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto profile_picture" src="img/profile_pic.jpg" alt="" style="width: 200px; border-radius: 200px; border: 4px solid white">
         <h1 class="text-uppercase mb-0">Shane Nicolls</h1>
         <br>
         <br>
@@ -92,9 +92,7 @@
                     <li class="portfolio_list_item">CSS</li>
                   </ul>
                   <div class="portfolio_btn_container">
-                    <a href="https://github.com/sNicolls" class="btn btn-default btn-lg social_media_btn">
-                      <span class="network-name">Live Demo</span>
-                    </a>
+                  
                     <a href="https://github.com/sNicolls/fish_finder_inReact" class="btn btn-default btn-lg social_media_btn">
                       <i class="fa fa-github fa-fw"></i>
                       <span class="network-name">Github</span>
