fishFinder live demo working

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
                     <li class="portfolio_list_item">CSS</li>
                   </ul>
                   <div class="portfolio_btn_container">
-                  
+                    <a href="http://default-environment.apymx2r298.us-west-1.elasticbeanstalk.com/" class="btn btn-default btn-lg social_media_btn">
+                      <span class="network-name">Live Demo</span>
+                    </a>
                     <a href="https://github.com/sNicolls/fish_finder_inReact" class="btn btn-default btn-lg social_media_btn">
                       <i class="fa fa-github fa-fw"></i>
                       <span class="network-name">Github</span>
