--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <br>
         <div class="row">
 
-          <div class="project_container">
+          <div class="project_container container">
             <div class="portfolio-item d-block mx-auto">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption d-flex position-absolute w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                   <h5 style="text-align: right" class="mr-4">Created With</h5>
                   <ul dir="rtl" class="portfolio_list">
@@ -94,25 +94,26 @@
                     <li class="portfolio_list_item">Node.JS</li>
                     <li class="portfolio_list_item">CSS</li>
                   </ul>
-                  <div class="portfolio_btn_container">
-                    <a href="http://default-environment.apymx2r298.us-west-1.elasticbeanstalk.com/" class="btn btn-default btn-lg social_media_btn">
-                      <span class="network-name">Live Demo</span>
-                    </a>
-                    <a href="https://github.com/sNicolls/fish_finder_inReact" class="btn btn-default btn-lg social_media_btn">
-                      <i class="fa fa-github fa-fw"></i>
-                      <span class="network-name">Github</span>
-                    </a>
-                  </div>
+
                 </div>
               </div>
-              <img class="img-fluid" src="img/fish_finder.png" alt="">
+              <img class="img-fluid project_img" src="img/fish_finder.png" alt="">
+            </div>
+            <div class="portfolio_btn_container container">
+              <a href="http://default-environment.apymx2r298.us-west-1.elasticbeanstalk.com/" class="btn btn-default btn-lg social_media_btn">
+                <span class="network-name">Live Demo</span>
+              </a>
+              <a href="https://github.com/sNicolls/fish_finder_inReact" class="btn btn-default btn-lg social_media_btn">
+                <i class="fa fa-github fa-fw"></i>
+                <span class="network-name">Github</span>
+              </a>
             </div>
           </div>
 
-          <div class="project_container">
+          <div class="project_container container">
             <div class="portfolio-item d-block mx-auto">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption d-flex position-absolute w-100">
+                <div class="portfolio-item-caption-content my-auto w-100 h-100 text-center text-white">
                   <h5 style="text-align: right" class="mr-4">Created With</h5>
                   <ul dir="rtl" class="portfolio_list">
                     <li class="portfolio_list_item">JavaScript</li>
@@ -120,18 +121,18 @@
                     <li class="portfolio_list_item">HTML</li>
                     <li class="portfolio_list_item">CSS</li>
                   </ul>
-                  <div class="portfolio_btn_container">
-                    <a href="./projects/m-vc-Calculator/" class="btn btn-default btn-lg social_media_btn">
-                      <span class="network-name">Live Demo</span>
-                    </a>
-                    <a href="https://github.com/sNicolls/m-vc-Calculator" class="btn btn-default btn-lg social_media_btn">
-                      <i class="fa fa-github fa-fw"></i>
-                      <span class="network-name">Github</span>
-                    </a>
-                  </div>
                 </div>
               </div>
-              <img class="img-fluid" src="img/calc_3.png" alt="">
+              <img class="img-fluid project_img" src="img/calc_3.png" alt="">
+            </div>
+            <div class="portfolio_btn_container container">
+              <a href="./projects/m-vc-Calculator/" class="btn btn-default btn-lg social_media_btn">
+                <span class="network-name">Live Demo</span>
+              </a>
+              <a href="https://github.com/sNicolls/m-vc-Calculator" class="btn btn-default btn-lg social_media_btn">
+                <i class="fa fa-github fa-fw"></i>
+                <span class="network-name">Github</span>
+              </a>
             </div>
           </div>
 
@@ -147,27 +148,28 @@
         <br>
         <div class="row">
 
-          <div class="project_container">
+          <div class="project_container container">
             <div class="portfolio-item d-block mx-auto">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption d-flex position-absolute h-50 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                   <h5 style="text-align: right" class="mr-4">Created With</h5>
                   <ul dir="rtl" class="portfolio_list">
                     <li class="portfolio_list_item">HTML</li>
                     <li class="portfolio_list_item">CSS</li>
                   </ul>
-                  <div class="portfolio_btn_container">
-                    <a href="http://procode.tips/mboutique/index.html" class="btn btn-default btn-lg social_media_btn">
-                      <span class="network-name">Live</span>
-                    </a>
-                    <a href="https://github.com/sNicolls/mboutique" class="btn btn-default btn-lg social_media_btn">
-                      <i class="fa fa-github fa-fw"></i>
-                      <span class="network-name">Github</span>
-                    </a>
-                  </div>
+
                 </div>
               </div>
-              <img class="img-fluid" src="img/mboutique_scrshot.png" alt="">
+              <img class="img-fluid project_img" src="img/mboutique_scrshot.png" alt="">
+            </div>
+            <div class="portfolio_btn_container container">
+              <a href="http://procode.tips/mboutique/index.html" class="btn btn-default btn-lg social_media_btn">
+                <span class="network-name">Live Site</span>
+              </a>
+              <a href="https://github.com/sNicolls/mboutique" class="btn btn-default btn-lg social_media_btn">
+                <i class="fa fa-github fa-fw"></i>
+                <span class="network-name">Github</span>
+              </a>
             </div>
           </div>
 
@@ -315,7 +317,7 @@
     <!--</section>-->
 
     <!-- Footer -->
-    <footer class="footer text-center">
+    <footer class="footer text-center" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
@@ -358,138 +360,6 @@
       </a>
     </div>
 
-    <!-- Portfolio Modals -->
-
-    <!-- Portfolio Modal 1 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Calculator</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/calc_sht_2.png" alt="">
-              <p class="mb-5">A fully functioning calculator built using JavaScript, JQuery, HTML5 and CSS3 </p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 2 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
-              <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 3 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/circus.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
