cleaned up a bit

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <img class="img-fluid project_img" src="img/calc_3.png" alt="">
             </div>
             <div class="portfolio_btn_container container">
-              <a href="./projects/m-vc-Calculator/" class="btn btn-default btn-lg social_media_btn">
+              <a href="http://procode.tips/m-vc-Calculator/" class="btn btn-default btn-lg social_media_btn">
                 <span class="network-name">Live Demo</span>
               </a>
               <a href="https://github.com/sNicolls/m-vc-Calculator" class="btn btn-default btn-lg social_media_btn">
@@ -135,9 +135,7 @@
               </a>
             </div>
           </div>
-
         </div>
-
       </div>
       <br>
       &nbsp
